# Parser_vakansii

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  vacancies.json
src/: abstract_claasses.py  abstract_classes.py  hh_api.py  json_storage.py  vacancies.json  vacancy.py  vacancy_storage.py
tests/: test_hh_api.py  test_json_storage.py  test_vacancy.py
