[project]
name = "kurs-work-oop"
version = "0.1.0"
description = ""
authors = [
    { name = "Klimchuk_Sergei", email = "klim.work@mail.ru" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
pytest-mock = "^3.14.1"
requests-mock = "^1.12.1"
cookiecutter = "^2.6.0"

[tool.black]
line-length = 119
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 119

